format project cards

--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -29,6 +29,77 @@ $link: theme-color("primary");
 a.icon > strong {margin-left:.25rem}
 .modal-card-body div.content {margin:$margin-default}
 
+.project.tile {
+    padding: 1rem;
+    .card-image {
+        figure {
+            height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start; /* Aligns content to the left */
+            overflow: hidden;
+            
+            img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: right center; /* Aligns image to the left */
+            }
+        }
+        .tags {
+            padding: 1rem;
+            display: flex;
+            justify-content: flex-end;
+        }
+    }
+}
+
+.media-right {
+    figure {
+        height: 300px;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start; /* Aligns content to the left */
+            overflow: hidden;
+            
+            img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            object-position: right center; /* Aligns image to the left */
+        }
+    }
+}
+// .project.tile {
+//     position: relative;
+//     .tile.project-image {
+//         position: relative;
+//         top: .5rem;
+//         display: flex;
+//     }
+//     .tags {
+//         position: absolute;
+//         bottom: 1rem;
+//         width: 100%;
+//     }
+// }
+
+
+// figure.project-image {
+//     max-height: 200px;
+//     overflow: hidden;
+//     display: flex;
+//     align-items: center;
+    
+//     img {
+//         width: 100%;
+//         height: 100%;
+//         object-fit: cover;
+//         object-position: center;
+//     }
+// }
+
+
 // import everything - alternatively import just what you need: https://bulma.io/documentation/overview/modular/
 @import "~bulma/bulma"; 
 
