--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -14,7 +14,11 @@ $fullhd-enabled: false;
 // More theme colors could be added here...
 $primary: #454545;
 
-$spaces: ("0": 0, "1": 1.65rem, "2": 1.75rem);
+$spaces: (
+    "0": 0,
+    "1": 1.65rem,
+    "2": 1.75rem
+);
 
 $margin-default: map-get($spaces, "2") map-get($spaces, "0");
 
@@ -24,28 +28,43 @@ $footer-padding: 3rem 1.5rem;
 $link: theme-color("primary");
 
 // Custom Styles
-.card-gap {margin-top:1.75rem}
-.modal-trigger { cursor: pointer; }
-a.icon > strong {margin-left:.25rem}
-.modal-card-body div.content {margin:$margin-default}
+.card-gap {
+    margin-top: 1.75rem
+}
+
+.modal-trigger {
+    cursor: pointer;
+}
+
+a.icon>strong {
+    margin-left: .25rem
+}
+
+.modal-card-body div.content {
+    margin: $margin-default
+}
 
 .project.tile {
     padding: 1rem;
+
     .card-image {
         figure {
             height: 300px;
             display: flex;
             align-items: center;
-            justify-content: flex-start; /* Aligns content to the left */
+            justify-content: flex-start;
+            /* Aligns content to the left */
             overflow: hidden;
-            
+
             img {
-            width: 100%;
-            height: 100%;
-            object-fit: contain;
-            object-position: right center; /* Aligns image to the left */
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+                object-position: right center;
+                /* Aligns image to the left */
             }
         }
+
         .tags {
             padding: 1rem;
             display: flex;
@@ -57,19 +76,22 @@ a.icon > strong {margin-left:.25rem}
 .media-right {
     figure {
         height: 300px;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start; /* Aligns content to the left */
-            overflow: hidden;
-            
-            img {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        /* Aligns content to the left */
+        overflow: hidden;
+
+        img {
             width: 100%;
             height: 100%;
             object-fit: contain;
-            object-position: right center; /* Aligns image to the left */
+            object-position: right center;
+            /* Aligns image to the left */
         }
     }
 }
+
 // .project.tile {
 //     position: relative;
 //     .tile.project-image {
@@ -90,7 +112,7 @@ a.icon > strong {margin-left:.25rem}
 //     overflow: hidden;
 //     display: flex;
 //     align-items: center;
-    
+
 //     img {
 //         width: 100%;
 //         height: 100%;
@@ -101,17 +123,205 @@ a.icon > strong {margin-left:.25rem}
 
 
 // import everything - alternatively import just what you need: https://bulma.io/documentation/overview/modular/
-@import "~bulma/bulma"; 
+@import "~bulma/bulma";
 
 // override specific bulma styles
-.section {padding: 2.15rem 1.5rem}
+.section {
+    padding: 2.15rem 1.5rem
+}
 
 @function theme-color($key: "primary") {
     @return map-get($theme-colors, $key);
 }
 
 // Flickity - begin
-.carousel-cell {width:100%}
+.carousel-cell {
+    width: 100%
+}
+
 // Flickity - end
 
- 
+
+
+
+.project-card {
+    margin-bottom: 1.5rem;
+
+    .card-content {
+        padding: 1.5rem;
+    }
+
+    // Content column styling
+    .content-column {
+        display: flex;
+        flex-direction: column;
+
+        .title {
+            margin-bottom: 0.5rem;
+            line-height: 1.2;
+        }
+
+        .subtitle {
+            margin-top: 0.25rem;
+            margin-bottom: 1rem;
+            color: #666;
+            line-height: 1.4;
+        }
+
+        // Mobile-specific adjustments
+        @media screen and (max-width: 1023px) {
+            // ...existing mobile styles
+
+            .image-column {
+                order: 1;
+                display: flex;
+                flex-direction: column;
+
+                // ...existing styles
+            }
+
+            .tags {
+                order: 3;
+                justify-content: flex-start;
+                margin-top: auto; // Make sure tags stay at bottom in mobile too
+            }
+        }
+
+        .description {
+            flex-grow: 1;
+        }
+    }
+
+    // Image column styling
+    .image-column {
+        display: flex;
+        flex-direction: column; // Image column styling
+
+        .image-column {
+            display: flex;
+            flex-direction: column;
+            height: 100%; // Add height:100% to allow flex to work properly
+
+            .project-image {
+                margin: 0;
+                width: 100%;
+                flex-grow: 1; // Let the image container grow to fill space
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                overflow: hidden;
+
+                img {
+                    width: 100%;
+                    height: auto;
+                    max-height: 400px; // Updated from 250px as requested
+                    object-fit: contain;
+                }
+            }
+
+            .tags {
+                margin-top: 1rem;
+                display: flex;
+                flex-wrap: wrap;
+
+                .project-card {
+                    margin-bottom: 1.5rem;
+
+                    .card-content {
+                        padding: 1.5rem;
+                        height: 100%;
+                    }
+
+                    .columns {
+                        height: 100%;
+                    }
+
+                    .column {
+                        height: 100%; // Make all columns full height
+                    }
+
+                    // ...rest of styles
+                }
+
+                justify-content: flex-start;
+                margin-top: auto; // Push tags to the bottom
+
+                .tag {
+                    margin-right: 0.5rem;
+                    margin-bottom: 0.5rem;
+                    background-color: #f5f5f5;
+                    color: #4a4a4a;
+                }
+            }
+        }
+
+        .project-image {
+            margin: 0;
+            width: 100%;
+            height: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: auto;
+                max-height: 250px;
+                object-fit: contain;
+            }
+        }
+
+        .tags {
+            margin-top: 1rem;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: flex-start;
+
+            .tag {
+                margin-right: 0.5rem;
+                margin-bottom: 0.5rem;
+                background-color: #f5f5f5;
+                color: #4a4a4a;
+            }
+        }
+    }
+
+    // Mobile-specific adjustments
+    @media screen and (max-width: 1023px) {
+        .columns {
+            margin: 0;
+        }
+
+        .column {
+            padding: 0.75rem 0;
+        }
+
+        .image-column {
+            order: 1; // Move image right after title/subtitle
+
+            .project-image {
+                max-height: none;
+
+                img {
+                    max-height: 400px;
+                    width: 100%;
+                }
+            }
+        }
+
+        .content-column {
+            order: 0; // Title/subtitle first
+
+            .description {
+                order: 2; // Move description after image
+                margin-top: 1rem;
+            }
+        }
+
+        .tags {
+            order: 3; // Tags at the bottom on mobile
+            justify-content: flex-start;
+        }
+    }
+}
