--- a/src/src/styles.scss
+++ b/src/src/styles.scss
@@ -326,3 +326,18 @@ a.icon>strong {
         }
     }
 }
+
+// Add to styles.scss
+.column.is-6-desktop {
+  padding: 0.75rem;
+}
+
+.project-card {
+  height: 100%; // Make cards the same height
+  display: flex;
+  flex-direction: column;
+  
+  .card-content {
+    flex-grow: 1;
+  }
+}
